# jiphyeon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude.rs  config.rs  editor.rs  error.rs  lib.rs  main.rs  models.rs  notifications.rs  project.rs  workspace.rs
src-tauri/src/clipper/: converter.rs  extractor.rs  mod.rs
src-tauri/src/commands/: claude_tools.rs  clipper.rs  graphify.rs  mod.rs  note.rs  onboarding.rs  projects.rs  rescaffold.rs  search.rs  settings.rs  transcribe.rs  vault.rs  vaults.rs
src-tauri/src/graphify/: cross.rs  mod.rs  reader.rs  report.rs
src-tauri/src/search/: index.rs  mod.rs  types.rs
src-tauri/src/vault/: indexer.rs  mod.rs  parser.rs  renderer.rs  search.rs
src-tauri/src/watcher/: mod.rs
src-tauri/templates/vault/: .gitattributes  .gitignore  CLAUDE.md
src-tauri/templates/vault/.claude/: settings.json
src-tauri/templates/vault/_moc/: Home.md  Projects.md  Timeline.md  Topics.md
src-tauri/templates/vault/_templates/: tpl-artifact.md  tpl-clipping.md  tpl-decision.md  tpl-idea.md  tpl-meeting.md  tpl-project-moc.md  tpl-reading.md  tpl-til.md  tpl-topic-moc.md
src-tauri/templates/vault/decisions/: 2026-04-21-markdown-vault-stack.md
src-tauri/templates/vault/dev/: rust-ownership.md
src-tauri/templates/vault/ideas/: seedling-llm-wiki.md
src-tauri/templates/vault/readings/: building-a-second-brain.md
src-tauri/tests/fixtures/graphify/: minimal.json  sample.json  (+2 more)
(+121 files in other folders)
