[package]
name = "jiphyeon"
version = "0.9.0"
description = "집현 — 마크다운 볼트 대시보드"
authors = ["you"]
edition = "2021"

[lib]
name = "jiphyeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
walkdir = "2.5"
notify = "8"
notify-debouncer-mini = "0.6"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
html2md = "0.2"
slug = "0.1"
tantivy = "0.22"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
urlencoding = "2"
blake3 = "1.8.5"

[dev-dependencies]
tempfile = "3"
